tests/NormalTests/paczka1/fuzzy1/74280961.err
Error in line 8: r4Yf2BprL3T A705 78,3
Error in line 19: TjVBB5 A432 81,6
Error in line 7: 98okRe A432 83,0
Error in line 28: 98okRe A705 52,6
Error in line 27: TjVBB5 S939 99,7
Error in line 32: r4Yf2BprL3T S939 37,0
Error in line 37: 3HiZrEkW6f A432 49,66
